# jobworkerp-conductor

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_ja.md  dot.env  workflows.toml.template
.cargo/: config.toml
.github/workflows/: ci.yaml  publish-image.yml
api/: Cargo.toml  dotenv.sample
api/app/: Cargo.toml
api/app/src/: app.rs  initialization_config_loader.rs  lib.rs  module.rs
api/app/src/app/: config_management.rs  cron_scheduler.rs  execution_status.rs  jobworkerp_server.rs  notification.rs  slack_event_handler.rs  source_resolver.rs  worker_result_handler.rs
api/app/src/app/notification/: service.rs
api/app/tests/: execution_status_e2e.rs
api/grpc-admin/: Cargo.toml  build.rs
api/grpc-admin/src/: lib.rs  proto.rs  service.rs
api/grpc-admin/src/front/: server.rs
api/grpc-admin/src/service/: config_management.rs  cron_scheduler.rs  error_handle.rs  execution_status.rs  jobworkerp_server.rs  slack_event_handler.rs  worker_result_handler.rs
api/infra/: Cargo.toml
api/infra/sql/migration/mysql/: 001_add_worker_execution.sql  002_add_worker_execution_handlers.sql  003_add_execution_ref.sql
api/infra/sql/migration/sqlite/: 001_add_worker_execution.sql  002_add_worker_execution_handlers.sql  003_add_execution_ref.sql
api/infra/sql/mysql/: 001_init_mysql.sql  002_schema.sql
api/infra/sql/sqlite/: 001_init_sqlite.sql  002_schema.sql
api/infra/src/: error.rs  infra.rs
api/infra/src/infra/: config_management.rs  module.rs  notification.rs  resource.rs
api/infra/src/infra/config_management/: migration.rs  rdb.rs
api/infra/src/infra/cron_scheduler/: rdb.rs  redis.rs  rows.rs
api/infra/src/infra/execution_ref/: rdb.rs  rows.rs
api/infra/src/infra/jobworkerp_server/: rdb.rs  redis.rs  rows.rs
api/infra/src/infra/notification/: channel.rs  factory.rs  redis.rs  repository.rs
api/infra/src/infra/slack_event_handler/: rdb.rs  rows.rs
api/infra/src/infra/worker_result_handler/: rdb.rs  redis.rs  rows.rs
conductor-main/: Cargo.toml  Dockerfile
conductor-main/src/: cron_scheduler.rs  lib.rs  main.rs
jobworkerp-conductor/: Cargo.toml
jobworkerp-conductor/src/: dynamic.rs  initialization.rs  integration_test.rs  lib.rs
jobworkerp-conductor/src/dynamic/: args_integration_test.rs  listener_manager.rs  local_config.rs  scheduler_manager.rs
jobworkerp-conductor/src/initialization/: layer.rs
jobworkerp-handler/: Cargo.toml
jobworkerp-handler/src/: job_result_listener.rs  lib.rs  settings.rs
proto/: Cargo.toml  build.rs
proto/protobuf/jobworkerp_conductor/data/: common.proto  cron_scheduler.proto  event.proto  execution_ref.proto  jobworkerp_server.proto  slack_event_handler.proto  worker_result_handler.proto
proto/protobuf/jobworkerp_conductor/service/: common.proto  config_management.proto  cron_scheduler.proto  execution_status.proto  jobworkerp_server.proto  slack_event_handler.proto  worker_result_handler.proto
proto/src/: lib.rs
shared/: Cargo.toml
shared/src/: config_events.rs  config_events_proto.rs  execution_ref_recorder.rs  initialization.rs  lib.rs  local_config_store.rs  notification.rs  triggered_execution.rs  validation.rs  worker_registration.rs  workflow_executor.rs
shared/src/notification/: receiver.rs  repository.rs  service.rs
slack-event-handler/: Cargo.toml
slack-event-handler/src/: config_cache.rs  event_matcher.rs  handler_executor.rs  lib.rs  manager.rs  socket_mode.rs
slack-event-handler/tests/: integration_tests.rs
slack-handler/: Cargo.toml  Dockerfile
slack-handler/src/: callbacks.rs  lib.rs  main.rs
