[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["sutr"]
description = "jobworkerp conductor - event orchestration system"
license = "Apache-2.0"

[workspace]
resolver = "2"
members = [
    "modules/command-utils",
    "modules/jobworkerp-client",
    "modules/infra-utils",
    "modules/memory-utils",
    "proto",
    "jobworkerp-handler",
    "slack-event-handler",       # Phase 3実装
    "conductor-main",
    "jobworkerp-conductor",      # Phase 0実装
    "shared",                    # 新規追加
    "api/infra",
    "api/app",
    "api/grpc-admin",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
panic = "unwind"

[profile.dev]
panic = "unwind"

[workspace.dependencies]
anyhow = { version = "1" }
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"] }
bb8 = "0.9"
debug_stub_derive = "0.3"
dotenvy = "0.15"
envy = "0.4"
futures = { version = "0.3", default-features = true }
futures-util = "0.3"
grpc-utils = { git = "https://github.com/sutr-app/grpc-utils", branch = "main" }
itertools = "0.15"
log = "0.4"
num-traits = "0.2"
once_cell = "1"
redis = "1.0"
thiserror = "2.0"
opentelemetry = { version = "0.32", features = ["trace"] }
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
tonic = "0.14"
tonic-build = "0.14"
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "0.14"
tonic-web = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
rand = "0.10"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls-tls", "json", "stream"] }
rsb_derive = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-rustls",
    "any",
    "mysql",
    "sqlite",
    "macros",
    "chrono",
] }
stretto = { version = "0.9", features = ["async"] }
strum_macros = "0.28"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = { version = "0.15" }
tokio-stream = { version = "0.1" }
toml = "1"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.33"
tracing-subscriber = "0.3"
url = "2"
uuid = "1.18"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }


[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn" }

[patch."https://github.com/sutr-app/command-utils.git"]
command-utils = { path = "modules/command-utils" }
