[package]
name = "jobworkerp-conductor"
version = "0.1.0"
edition = "2021"

[dependencies]
jobworkerp-handler = { path = "../jobworkerp-handler" }
jobworkerp-client = { path = "../modules/jobworkerp-client" }
infra-utils = { path = "../modules/infra-utils" }
memory-utils = { path = "../modules/memory-utils" }
slack-event-handler = { path = "../slack-event-handler" }

shared = { path = "../shared" }
proto = { path = "../proto" }
# api-infra = { path = "../api/infra", package = "infra" }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio-cron-scheduler = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
[dev-dependencies]
tokio-test = "0.4"
