[package]
name = "jobworkerp-handler"
version = "0.0.1"
edition = "2021"


[dependencies]
command-utils = { path = "../modules/command-utils" }
jobworkerp-client = { path = "../modules/jobworkerp-client" }
proto = { path = "../proto" }
shared = { path = "../shared" }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
prost-reflect = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }


[build-dependencies]
prost-build = { workspace = true }
