[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
proto = { path = "../proto" }
jobworkerp-client = { path = "../modules/jobworkerp-client" }

anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
url = { workspace = true }
